--- a/app/assets/stylesheets/pill_editor.scss
+++ b/app/assets/stylesheets/pill_editor.scss
@@ -7,7 +7,7 @@ patternpad.standalone {
   background: #ffffff;
   border-top: 1px #cccccc solid;
   position:relative;
-  width: 92%;
+  width: 100%;
 
   &.svgInput-focus {
     /*border: 1px #999999 solid;*/
